# scraper-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.local.yaml  compose.prod.yaml  compose.yaml  config.py  main.py  pyproject.toml  setup_instructions.md
.github/workflows/: deploy.yml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: d0b8fb6e8886_add_init_tables.py
app/common/: log_handler.py
app/common/middleware/: auth.py  security.py
app/contents/: router.py
app/core/: celery_app.py  config.py  database.py
app/jobs/: models.py  router.py  schemas.py
app/scripts/: models.py  router.py  schemas.py
app/services/: __init__.py  telegram_service.py
app/utils/: async_tool.py  filesystem.py
app/worker/: __init__.py  tasks_scripts.py
docker/local/web/: start
docker/local/worker/: _control  _main
docker/production/: Dockerfile
docker/production/redis/: Dockerfile
docker/production/root/etc/s6/.s6-svscan/: finish
docker/production/web/: run  start
docker/production/worker/: _control  _main
docs/: example_data_processor.py  example_failing_script.py
middleware/: auth.py  security.py
scripts/: example_counter.py  example_web_scraper.py
templates/: base.html  dashboard.html  login.html
templates/components/: assets_list.html  content_list.html  download_list.html  script_list.html
